--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy": "npm run save-master && npm run build-deploy && ngh --dir=dist/buttons",
-    "save-master": "git add . && git commit -m 'Auto-save changes before deployment' && git push origin master",
+    "save-master": "git add . && git commit -m \"Auto-save changes before deployment\" && git push origin master",
     "build-deploy": "ng build --prod --base-href https://pincha1212.github.io/buttons/"
   },
   "private": true,
